# check_zfs_snapshot

./: .gitignore  .travis.yml  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  README.md.template.sh  README.rst  README_template.rst  check_zfs_snapshot  check_zfs_snapshot.py  description  icingaexchange.yml  pyproject.toml  test.sh  tox.ini
.github/workflows/: tests.yml
src/check_zfs_snapshot/: __init__.py
test/: getopts.bats  integration.bats  test-helper.sh  test.bash_unit  test.bats  unit-without-mock.bats  unit.bats
test/lib/: render-readme.sh
tests/: README.md  helper.py  test_argparse.py  test_integration.py  test_mocked.py  test_on_real_executables.py  test_timespan.py
