[project]
name = "check_zfs_snapshot"
version = "0.1.0"
description = ""
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["nagiosplugin>=1,<2"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/check_zfs_snapshot"

[project.scripts]
"check_zfs_snapshot.py" = "check_zfs_snapshot:main"

[tool.uv]

[tool.uv.build-backend]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nagiosplugin-stubs>=0.6.4",
    "pytest>=9.0.2",
]
