[project]
name = "check_zfs_snapshot"
version = "2.1.0"
description = "A monitoring plugin that checks how long ago the last snapshot of ZFS datasets was created."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["nagiosplugin>=1,<2"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/check_zfs_snapshot"

[project.scripts]
"check_zfs_snapshot" = "check_zfs_snapshot:main"

[tool.uv]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.1", "nagiosplugin-stubs>=0.6.4", "pytest>=9.0.2"]
